Fix bug where image was too large

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,34 @@
 html, body {
     width: 100%;
     height: 100%;
+    margin: 0;
+    overflow: hidden;
 }
 
 .container {
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex: 1;
+    height: 100%;
 }
 
 .left-side {
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    width: 40%;
     height: 100%;
 }
 
 .right-side {
-    width: 50%;
+    display: flex;
+    width: 60%;
     height: 100%;
+}
+
+.pattern {
+    border-radius: 100px;
+}
+
+.blue-logo {
+    width: 20%;
 }
